[package]
name = "telegram_pr_poll_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version =  "1.34.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.8"
serde = { version = "1.0.192", features = ["derive"] }
lazy_static = "1.4.0"
config = "0.13.3"
